<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.boxtree.vic.contactsapp.AddContactActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="181dp"
        android:layout_height="171dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="?android:attr/colorBackground"
        android:clickable="true"
        android:contentDescription="@string/contactpictureContentDescription"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_editor_absoluteX="164dp" />


    <ImageButton
        android:id="@+id/addPictureButton"
        style="@android:style/Widget.Material.ImageButton"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_alignParentEnd="true"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/addcontactpicturebuttonContentDescription"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="@+id/imageView" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="304dp"
        android:layout_height="38dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="57dp"
        android:contentDescription="@string/inputnamecontentdescription"
        android:ems="10"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:text="@string/name_input"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/nicknameEditText"
        android:layout_width="304dp"
        android:layout_height="38dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:text="@string/nickname_input"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="304dp"
        android:layout_height="38dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="phone"
        android:selectAllOnFocus="true"
        android:text="@string/phone_input"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nicknameEditText"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/postalAddressEditText"
        android:layout_width="304dp"
        android:layout_height="39dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:selectAllOnFocus="true"
        android:text="@string/address_input"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberEditText"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="304dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/emailaddressinput"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:text="@string/email_input"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postalAddressEditText"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/saveContactButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
