...
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editText" />
        -->


    <ImageButton
        android:id="@+id/addContactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"

...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <fragment
        android:id="@+id/contactFragment"
        android:name="org.boxtree.vic.contactsapp.ContactFragment"
        android:layout_width="371dp"
        android:layout_height="392dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
...
